--- a/OutlawTracker.ioc
+++ b/OutlawTracker.ioc
@@ -12,13 +12,14 @@ KeepUserPlacement=false
 Mcu.CPN=STM32L431CCT6
 Mcu.Family=STM32L4
 Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP1=LPTIM1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32L431C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0
@@ -37,7 +38,8 @@ Mcu.Pin2=PA2
 Mcu.Pin20=PA14 (JTCK-SWCLK)
 Mcu.Pin21=PB9
 Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_tim6
+Mcu.Pin23=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin24=VP_SYS_VS_tim6
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA6
@@ -45,7 +47,7 @@ Mcu.Pin6=PA7
 Mcu.Pin7=PB1
 Mcu.Pin8=PB2
 Mcu.Pin9=PB10
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431CCTx
@@ -218,6 +220,8 @@ USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
+VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
